# ipytree

./: .gitignore  MANIFEST.in  README.md  RELEASE.md  environment.yml  ipytree.json  pyproject.toml  pytest.ini  redo.sh  setup.py
.github/workflows/: build.yml
examples/: Users_management.ipynb  ipytree.ipynb  ipytree_ipyleaflet.ipynb  stress_test.ipynb
ipytree/: __init__.py  _version.py  tree.py
js/: README.md  package-lock.json  package.json  webpack.config.js
js/lib/: embed.js  extension.js  index.js  labplugin.js  tree.css  tree.js
js/lib/theme/: style.css
tests/: test_basic.py
